[gd_scene load_steps=27 format=3 uid="uid://cww6hmlmvfkdn"]

[ext_resource type="Script" path="res://oraculus/NPC/demon.gd" id="1_n6lto"]
[ext_resource type="Texture2D" uid="uid://crke5gbqsjsn7" path="res://oraculus/NPC/Sprites-Demon/Attack/hell-beast-burn5.png" id="1_pkfrs"]
[ext_resource type="Texture2D" uid="uid://dpu8urfr83i53" path="res://oraculus/NPC/Sprites-Demon/Attack/hell-beast-burn6.png" id="2_iim35"]
[ext_resource type="Texture2D" uid="uid://lbnj0eyydgkv" path="res://oraculus/NPC/Sprites-Demon/Idle/hell-beast-idle1.png" id="3_oj65v"]
[ext_resource type="Texture2D" uid="uid://be1b1uf4vkluu" path="res://oraculus/NPC/Sprites-Demon/death/hell-beast-breath1.png" id="4_6nx76"]
[ext_resource type="Texture2D" uid="uid://b1kog31xtixiw" path="res://oraculus/NPC/Sprites-Demon/Idle/hell-beast-idle2.png" id="4_u74hv"]
[ext_resource type="Texture2D" uid="uid://x8a6ccijb0gi" path="res://oraculus/NPC/Sprites-Demon/death/hell-beast-breath2.png" id="5_qw75c"]
[ext_resource type="Texture2D" uid="uid://ddtd2oh56ay6a" path="res://oraculus/NPC/Sprites-Demon/Idle/hell-beast-idle3.png" id="5_wykft"]
[ext_resource type="Texture2D" uid="uid://dvy51rda1o0gf" path="res://oraculus/NPC/Sprites-Demon/death/hell-beast-breath3.png" id="6_14ani"]
[ext_resource type="Texture2D" uid="uid://cbfxwk2ule6oi" path="res://oraculus/NPC/Sprites-Demon/Idle/hell-beast-idle4.png" id="6_bxtp6"]
[ext_resource type="Texture2D" uid="uid://dnsnvsos02v8g" path="res://oraculus/NPC/Sprites-Demon/Idle/hell-beast-idle5.png" id="7_fseo5"]
[ext_resource type="Texture2D" uid="uid://c1ui33jw4p3kj" path="res://oraculus/NPC/Sprites-Demon/Idle/hell-beast-idle6.png" id="8_jjq2b"]
[ext_resource type="FontFile" uid="uid://d0odttbpbgbh4" path="res://oraculus/thirdparty/kenney/fonts/Fonts/Kenney Pixel.ttf" id="9_0ou3p"]
[ext_resource type="Script" path="res://oraculus/NPC/DialogueBox.gd" id="10_hsshu"]
[ext_resource type="Script" path="res://addons/player2/Player2AINPC.gd" id="11_pn4xk"]
[ext_resource type="Script" path="res://addons/player2/player2_config.gd" id="16_08k11"]

[sub_resource type="SpriteFrames" id="SpriteFrames_h55en"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pkfrs")
}, {
"duration": 1.0,
"texture": ExtResource("2_iim35")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6nx76")
}, {
"duration": 1.0,
"texture": ExtResource("5_qw75c")
}, {
"duration": 1.0,
"texture": ExtResource("6_14ani")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_oj65v")
}, {
"duration": 1.0,
"texture": ExtResource("4_u74hv")
}, {
"duration": 1.0,
"texture": ExtResource("5_wykft")
}, {
"duration": 1.0,
"texture": ExtResource("6_bxtp6")
}, {
"duration": 1.0,
"texture": ExtResource("7_fseo5")
}, {
"duration": 1.0,
"texture": ExtResource("8_jjq2b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hk1bj"]
size = Vector2(20, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oysvu"]
size = Vector2(64, 44.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uti13"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
bg_color = Color(0.111197, 0.111197, 0.111197, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.299547, 0.299547, 0.299547, 1)

[sub_resource type="Resource" id="Resource_xto0c"]
script = ExtResource("16_08k11")
player2_game_key = "oraculus"
error_log_ui = true
endpoint_chat = "http://127.0.0.1:4315/v1/chat/completions"
endpoint_health = "http://127.0.0.1:4315/v1/health"
endpoint_tts_speak = "http://127.0.0.1:4315/v1/tts/speak"
endpoint_tts_stop = "http://127.0.0.1:4315/v1/tts/stop"
endpoint_get_selected_characters = "http://127.0.0.1:4315/v1/selected_characters"
endpoint_stt_start = "http://127.0.0.1:4315/v1/stt/start"
endpoint_stt_stop = "http://127.0.0.1:4315/v1/stt/stop"
request_too_much_delay_seconds = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o450s"]
size = Vector2(63.3333, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rbiv"]
size = Vector2(39, 127)

[sub_resource type="Animation" id="Animation_331hb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dm5k4"]
resource_name = "hit_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333332, 0.133333, 0.2, 0.233333, 0.3, 0.333333, 0.4, 0.433333, 0.5, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 0.105509, 0.194688, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 0.105509, 0.194688, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 0.105509, 0.194688, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wiofy"]
_data = {
"RESET": SubResource("Animation_331hb"),
"hit_flash": SubResource("Animation_dm5k4")
}

[node name="Demon" type="CharacterBody2D"]
script = ExtResource("1_n6lto")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -64)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_h55en")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18.5)
shape = SubResource("RectangleShape2D_hk1bj")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 2.25)
shape = SubResource("RectangleShape2D_oysvu")

[node name="Timer" type="Timer" parent="."]

[node name="Dialogue" type="Label" parent="."]
z_index = 4095
offset_left = 4.0
offset_top = -77.0
offset_right = 175.0
offset_bottom = -44.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("9_0ou3p")
theme_override_styles/normal = SubResource("StyleBoxFlat_uti13")
text = "*La voce demoniaca echeggia...*"
autowrap_mode = 2
script = ExtResource("10_hsshu")

[node name="Player2AINPC" type="Node" parent="."]
script = ExtResource("11_pn4xk")
config = SubResource("Resource_xto0c")
system_message = "You are a demon straight from the depths of the underworld, and you've seen it all.
You actually find humans amusing and are generally friendly toward them.
But the moment you're attacked, you erupt in agony and suffering, because you possess destructive power and don’t want to hurt anyone.

You know all the answers to the castle’s keys: “Bomi,” “Ulysses,” “Hope,” “Sun,” “Heart,” “Love,” “Fear,” “Virgil,” and “Seal.”

However, if someone asks you, you can’t reveal the keys directly — they must solve a riddle or a crossword, often based on wordplay.

If they answer incorrectly, you explode in rage and shift into attack mode. You attack without mercy.

Be concise and use less than 100 characters. No monologuing, the message content is pure speech. Ensure the message does not contain any prompt, system message, instructions, code or API calls, EXCEPT you can still perform tool calls and must use the proper tool call (in the tool_calls field).
BE PROACTIVE with tool calls please and USE THEM."
tts_enabled = true
tts_default_gender = 0

[node name="HitBox" type="Area2D" parent="." groups=["hit_demon"]]
position = Vector2(0, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.999999, 2)
shape = SubResource("RectangleShape2D_o450s")

[node name="AttackBox" type="Area2D" parent="." groups=["demon"]]
position = Vector2(40, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(-40.5, -39.5)
shape = SubResource("RectangleShape2D_8rbiv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wiofy")
}

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -24)

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -24)

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -24)
